<resources>
    <!-- <string name="app_name">AcademyTlvMovies</string> -->

    <string name="app_name">My Movies App</string>
    <string name="app_title">Android Academy Fundamentals Course 2019</string>
    <string name="infinity_war_title">Avengers: Infinity War</string>
    <string name="infinity_war_release_date">2018-04-25</string>
    <string name="infinity_war_overview">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="infinity_war_trailer">https://www.youtube.com/watch?v=6ZfuNTqbHE8</string>
    <string name="released">Released:</string>
    <string name="movie_trailer">Movie Trailer</string>
    <string name="overview">Overview:</string>
</resources>
